--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - master
   schedule:
-    - cron: '*/60 * * * *'
+    - cron: '0 09-19/2 * * 1,2,3,4,5'
 
 jobs:
   build:
