--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - master
   schedule:
-    - cron: '0 01-16/1 * * 1,2,3,4,5'
+    - cron: '0 01-16/1 * * *'
 
 jobs:
   build:
