--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - master
   schedule:
-    - cron: '15 01-16/1 * * *'
+    - cron: '0 23,0,1,2,3,4,5,6,7,8,9,10,11,12,13,14 * * *'
 
 jobs:
   build:
